--- a/cart-with-file-upload-int-client/package.json
+++ b/cart-with-file-upload-int-client/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-router": "^1.79.0",
     "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
